# health-terminal

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
algorithms/: README.md  balance.c  balance.h  bodyfat_navy.c  bodyfat_navy.h  crc16.c  crc16.h  filters.c  filters.h  health_score.c  health_score.h  record_codec.c  record_codec.h  spo2_hr.c  spo2_hr.h
algorithms/Ceedling/: project.yml
algorithms/Ceedling/test/: test_spo2_hr.c
app/: README.md  app.h  app_sensors.c  app_statemachine.c  main.c  ui_flow.c
bsp/: README.md  delay.c  delay.h  flash_eeprom.c  flash_eeprom.h  gpio.c  gpio.h  hx711.c  hx711.h  i2c_bus.c  i2c_bus.h  tick.c  tick.h  uart.c  uart.h
cmake/: arm-none-eabi.cmake  firmware.cmake
core/: README.md
core/include/: board.h  stm32f1xx_hal_conf.h
core/ldscripts/: STM32F103C8Tx_FLASH.ld
core/src/: stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  system_clock.c
docs/: README.md  中期任务清单.md  协作流程.md  开发环境搭建.md  引脚分配表.md  接口文档.md  第一周行动清单.md
include/: health_if.h  health_record.h
modules/: README.md
modules/ble/: ble.c  ble.h
modules/ds18b20/: ds18b20.c  ds18b20.h
modules/hcsr04/: hcsr04.c  hcsr04.h
modules/hx711_grip/: hx711_grip.c  hx711_grip.h
modules/hx711_weight/: hx711_weight.c  hx711_weight.h
modules/keypad/: keypad.c  keypad.h
modules/max30102/: max30102.c  max30102.h
modules/max30102/Ceedling/: project.yml
modules/max30102/Ceedling/support/: stm32f1xx_hal.h
modules/max30102/Ceedling/test/: test_max30102.c
modules/mpu6050/: mpu6050.c  mpu6050.h
modules/oled/: oled.c  oled.h
modules/reaction/: reaction.c  reaction.h
modules/storage/: storage.c  storage.h
scripts/: bootstrap.ps1  bootstrap.sh  fetch_hal.sh
tests/: CMakeLists.txt  README.md  test_algorithms.c  test_codec.c  test_filters.c  test_util.h
web/: README.md  dashboard.html
